--- a/UI/main.ui
+++ b/UI/main.ui
@@ -105,7 +105,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>010C</string>
+    <string/>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit_V">
@@ -118,7 +118,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>010C</string>
+    <string/>
    </property>
   </widget>
  </widget>
